force-app/main/default/objects/BTN_Event__c/BTN_Event__c.object-meta.xml
<CustomObject>
    <label>Event</label>
    <nameField>
        <displayFormat>E{00000000}</displayFormat>
        <label>Event</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>