force-app/main/default/objects/BTN_Event__c/fields/Additional_Carrer_path__c.field-meta.xml
<CustomField>
    <fullName>Additional_Carrer_path__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Carrer path</label>
    <referenceTo>Achievement_Set__c</referenceTo>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>