force-app/main/default/objects/BTN_Event__c/fields/Assessment_comments__c.field-meta.xml
<CustomField>
    <fullName>Assessment_comments__c</fullName>
    <description>for periodic assessment</description>
    <label>Assessment comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>