force-app/main/default/objects/BTN_Event__c/fields/Assessment_trend__c.field-meta.xml
<CustomField>
    <fullName>Assessment_trend__c</fullName>
    <label>Assessment trend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declining</fullName>
            </value>
            <value>
                <fullName>Stagnation</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>