force-app/main/default/objects/BTN_Event__c/fields/BriteSkills_updated__c.field-meta.xml
<CustomField>
    <fullName>BriteSkills_updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for periodic assessment module</description>
    <label>BriteSkills updated?</label>
    <type>Checkbox</type>
</CustomField>