force-app/main/default/objects/BTN_Event__c/fields/BS_skills_updated__c.field-meta.xml
<CustomField>
    <fullName>BS_skills_updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for periodic assessment module</description>
    <label>BS skills updated?</label>
    <type>Checkbox</type>
</CustomField>