force-app/main/default/objects/BTN_Event__c/fields/Career_path__c.field-meta.xml
<CustomField>
    <fullName>Career_path__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>for periodic assessment</description>
    <label>Career path</label>
    <referenceTo>Achievement_Set__c</referenceTo>
    <relationshipName>Events2</relationshipName>
    <type>Lookup</type>
</CustomField>