force-app/main/default/objects/BTN_Event__c/fields/career_path_comments__c.field-meta.xml
<CustomField>
    <fullName>career_path_comments__c</fullName>
    <description>for periodic assessment module</description>
    <label>Career path comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>