force-app/main/default/objects/BTN_Event__c/fields/Coworkers_feedback__c.field-meta.xml
<CustomField>
    <fullName>Coworkers_feedback__c</fullName>
    <description>for periodic assessment module</description>
    <label>Coworkers feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>