force-app/main/default/objects/BTN_Event__c/fields/Current_Position__c.field-meta.xml
<CustomField>
    <fullName>Current_Position__c</fullName>
    <description>Asessment module (requires snapshot on creation time and not the live lookup)</description>
    <label>Current Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>