force-app/main/default/objects/BTN_Event__c/fields/Customer_feedback_summary__c.field-meta.xml
<CustomField>
    <fullName>Customer_feedback_summary__c</fullName>
    <description>for periodic assessment module</description>
    <label>Customer feedback summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>