force-app/main/default/objects/BTN_Event__c/fields/Customer_survey_updated__c.field-meta.xml
<CustomField>
    <fullName>Customer_survey_updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for periodic assessment module</description>
    <label>Customer survey updated?</label>
    <type>Checkbox</type>
</CustomField>