force-app/main/default/objects/BTN_Event__c/fields/CV_updated__c.field-meta.xml
<CustomField>
    <fullName>CV_updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for periodic assessment module</description>
    <label>CV updated?</label>
    <type>Checkbox</type>
</CustomField>