force-app/main/default/objects/BTN_Event__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description (HR)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>