force-app/main/default/objects/BTN_Event__c/fields/DescriptionMerged__c.field-meta.xml
<CustomField>
    <fullName>DescriptionMerged__c</fullName>
    <label>Description HR / Technical</label>
    <type>TextArea</type>
</CustomField>