force-app/main/default/objects/BTN_Event__c/fields/DescriptionTechnical__c.field-meta.xml
<CustomField>
    <fullName>DescriptionTechnical__c</fullName>
    <label>Description (Technical)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>