force-app/main/default/objects/BTN_Event__c/fields/Feedback_company__c.field-meta.xml
<CustomField>
    <fullName>Feedback_company__c</fullName>
    <description>for periodic assessment module</description>
    <label>Feedback company</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>