force-app/main/default/objects/BTN_Event__c/fields/Feedback_department__c.field-meta.xml
<CustomField>
    <fullName>Feedback_department__c</fullName>
    <description>for periodic assessment module</description>
    <label>Feedback department</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>