force-app/main/default/objects/BTN_Event__c/fields/Feedback_other_departments__c.field-meta.xml
<CustomField>
    <fullName>Feedback_other_departments__c</fullName>
    <description>for periodic assessment module</description>
    <label>Feedback other departments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>