force-app/main/default/objects/BTN_Event__c/fields/General_assessment__c.field-meta.xml
<CustomField>
    <fullName>General_assessment__c</fullName>
    <description>for periodic assessment</description>
    <label>General assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Below average</fullName>
            </value>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Above average</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>