force-app/main/default/objects/BTN_Event__c/fields/GoogleId__c.field-meta.xml
<CustomField>
    <fullName>GoogleId__c</fullName>
    <label>GoogleId</label>
    <length>128</length>
    <type>Text</type>
</CustomField>