force-app/main/default/objects/BTN_Event__c/fields/ImportOwnerId__c.field-meta.xml
<CustomField>
    <fullName>ImportOwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Import Owner Id</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Events1</relationshipName>
    <type>Lookup</type>
</CustomField>