force-app/main/default/objects/BTN_Event__c/fields/Internal_Description__c.field-meta.xml
<CustomField>
    <fullName>Internal_Description__c</fullName>
    <inlineHelpText>Field visible only for HR</inlineHelpText>
    <label>Internal Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>