force-app/main/default/objects/BTN_Event__c/fields/Interviewed__c.field-meta.xml
<CustomField>
    <fullName>Interviewed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewed</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Events (Interviewed)</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>