force-app/main/default/objects/BTN_Event__c/fields/Interviewer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer (HR)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>