force-app/main/default/objects/BTN_Event__c/fields/Interviewer_frm__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_frm__c</fullName>
    <formula>IF (
  ISPICKVAL(Profile__c, &apos;Miękka&apos;), Interviewer_Contact__r.Name_frm__c,
  IF (
    ISPICKVAL(Profile__c, &apos;Techniczna&apos;), Technical_Interviewer__r.Name_frm__c,
    Interviewer_Contact__r.Name_frm__c + &apos; / &apos; + Technical_Interviewer__r.Name_frm__c
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interviewer</label>
    <type>Text</type>
</CustomField>