force-app/main/default/objects/BTN_Event__c/fields/Interviewer_user__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>