force-app/main/default/objects/BTN_Event__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lublin Hamleta</fullName>
            </value>
            <value>
                <fullName>Lublin Morwowa</fullName>
            </value>
            <value>
                <fullName>Warszawa Bukowińska</fullName>
            </value>
            <value>
                <fullName>Warszawa Wołoska</fullName>
            </value>
            <value>
                <fullName>Kielce IX Wieków</fullName>
            </value>
            <value>
                <fullName>Poznań Strzelecka</fullName>
            </value>
            <value>
                <fullName>Zdalnie</fullName>
            </value>
            <value>
                <fullName>U klienta [Other location is mandatory]</fullName>
            </value>
            <value>
                <fullName>Inne [Other location is mandatory]</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
                <isActive>false</isActive>
                <label>Call</label>
            </value>
            <value>
                <fullName>Meeting</fullName>
                <isActive>false</isActive>
                <label>Meeting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>