force-app/main/default/objects/BTN_Event__c/fields/Meeting_Room__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room__c</fullName>
    <label>Meeting Room</label>
    <length>255</length>
    <type>Text</type>
</CustomField>