force-app/main/default/objects/BTN_Event__c/fields/OtherLocation__c.field-meta.xml
<CustomField>
    <fullName>OtherLocation__c</fullName>
    <label>Other Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>