force-app/main/default/objects/BTN_Event__c/fields/ParentEvent__c.field-meta.xml
<CustomField>
    <fullName>ParentEvent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Event</label>
    <referenceTo>BTN_Event__c</referenceTo>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>