force-app/main/default/objects/BTN_Event__c/fields/ParentRequest__c.field-meta.xml
<CustomField>
    <fullName>ParentRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource request</label>
    <referenceTo>BTN_ResourceRequest__c</referenceTo>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>