force-app/main/default/objects/BTN_Event__c/fields/PostOnRelatedCandidates__c.field-meta.xml
<CustomField>
    <fullName>PostOnRelatedCandidates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post on Related Candidates</label>
    <type>Checkbox</type>
</CustomField>