force-app/main/default/objects/BTN_Event__c/fields/Previous_career_path__c.field-meta.xml
<CustomField>
    <fullName>Previous_career_path__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>for periodic assessment</description>
    <label>Previous career path</label>
    <referenceTo>Achievement_Set__c</referenceTo>
    <relationshipName>Events1</relationshipName>
    <type>Lookup</type>
</CustomField>