force-app/main/default/objects/BTN_Event__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Techniczna</fullName>
            </value>
            <value>
                <fullName>Miękka</fullName>
            </value>
            <value>
                <fullName>Miękka + Techniczna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>