force-app/main/default/objects/BTN_Event__c/fields/Profiling__c.field-meta.xml
<CustomField>
    <fullName>Profiling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profiling</label>
    <type>Checkbox</type>
</CustomField>