force-app/main/default/objects/BTN_Event__c/fields/Profiling_date__c.field-meta.xml
<CustomField>
    <fullName>Profiling_date__c</fullName>
    <label>Profiling date</label>
    <type>DateTime</type>
</CustomField>