force-app/main/default/objects/BTN_Event__c/fields/Requests_complaints__c.field-meta.xml
<CustomField>
    <fullName>Requests_complaints__c</fullName>
    <description>for periodic assessment module</description>
    <label>Requests, complaints</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>