force-app/main/default/objects/BTN_Event__c/fields/Strong_spots__c.field-meta.xml
<CustomField>
    <fullName>Strong_spots__c</fullName>
    <description>for periodc assessment module</description>
    <label>Strong spots</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>