force-app/main/default/objects/BTN_Event__c/fields/Technical_Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Technical_Interviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Interviewer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Events2</relationshipName>
    <type>Lookup</type>
</CustomField>