force-app/main/default/objects/BTN_Event__c/fields/Technical_Interviewer_User__c.field-meta.xml
<CustomField>
    <fullName>Technical_Interviewer_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Interviewer (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Events2</relationshipName>
    <type>Lookup</type>
</CustomField>