force-app/main/default/objects/BTN_Event__c/fields/UserUsedForGoogleIntegration__c.field-meta.xml
<CustomField>
    <fullName>UserUsedForGoogleIntegration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UserUsedForGoogleIntegration</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Events1</relationshipName>
    <type>Lookup</type>
</CustomField>