force-app/main/default/objects/BTN_Event__c/fields/Weak_spots__c.field-meta.xml
<CustomField>
    <fullName>Weak_spots__c</fullName>
    <description>for periodic assessment module</description>
    <label>Weak spots</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>