force-app/main/default/objects/BTN_Event__c/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <description>Genereal event</description>
    <label>General</label>
</RecordType>