force-app/main/default/objects/BTN_Event__c/recordTypes/Interview.recordType-meta.xml
<RecordType>
    <fullName>Interview</fullName>
    <active>true</active>
    <description>Interview with potential employee</description>
    <label>Interview</label>
</RecordType>