force-app/main/default/objects/BTN_Event__c/recordTypes/Periodic_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Periodic_Assessment</fullName>
    <active>true</active>
    <label>Periodic Assessment</label>
</RecordType>