force-app/main/default/objects/BTN_Event__c/validationRules/vDates.validationRule-meta.xml
<ValidationRule>
    <fullName>vDates</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Time__c &gt; End_Time__c</errorConditionFormula>
    <errorMessage>Please set correctly Start and End Date</errorMessage>
</ValidationRule>