force-app/main/default/objects/BTN_Event__c/validationRules/vStartBeforeEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>vStartBeforeEndDate</fullName>
    <active>true</active>
    <description>BRITCRM-299 Start Date can not occur after End Date</description>
    <errorConditionFormula>Start_Time__c &gt; End_Time__c</errorConditionFormula>
    <errorMessage>Please set Start Time before End Time</errorMessage>
</ValidationRule>