force-app/main/default/objects/BTN_Event__c/listViews/External_with_profiling.listView-meta.xml
<ListView>
    <fullName>External_with_profiling</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Interviewed__c</columns>
    <columns>Candidate__c</columns>
    <columns>Profiling__c</columns>
    <columns>Profile__c</columns>
    <columns>Profiling_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Profiling__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>External with profiling</label>
    <language>en_US</language>
</ListView>