force-app/main/default/objects/BTN_Event__c/listViews/General_Interviews.listView-meta.xml
<ListView>
    <fullName>General_Interviews</fullName>
    <columns>NAME</columns>
    <columns>Interviewed__c</columns>
    <columns>Candidate__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>BTN_Event__c.General</value>
    </filters>
    <label>General Interviews</label>
    <language>en_US</language>
</ListView>