force-app/main/default/objects/BTN_Event__c/listViews/Internal_Inteviews.listView-meta.xml
<ListView>
    <fullName>Internal_Inteviews</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Interviewed__c</columns>
    <columns>Candidate__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Location__c</columns>
    <columns>Interviewer_Contact__c</columns>
    <columns>Technical_Interviewer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>BTN_Event__c.Interview</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Internal Interview</value>
    </filters>
    <label>Internal Inteviews</label>
    <language>en_US</language>
</ListView>